[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/AudioManager.gd" type="Script" id=1]
[ext_resource path="res://Audio/SFX/Locking Door 02.mp3" type="AudioStream" id=2]
[ext_resource path="res://Audio/SFX/Door Opening 02.mp3" type="AudioStream" id=3]
[ext_resource path="res://Audio/SFX/Coin Bag Pick Up 02.mp3" type="AudioStream" id=4]

[node name="AudioManager" type="Node"]
script = ExtResource( 1 )

[node name="DoorOpenPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "SFX"

[node name="DoorUnlockPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
bus = "SFX"

[node name="PickupItemPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "SFX"

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
bus = "Music"
